--- a/package.json
+++ b/package.json
@@ -11,6 +11,14 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "2.0.2"
+    "@astrojs/react": "^2.0.1",
+    "@astrojs/tailwind": "^3.0.0",
+    "@types/react": "^18.0.21",
+    "@types/react-dom": "^18.0.6",
+    "astro": "2.0.2",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-toastify": "^9.1.1",
+    "tailwindcss": "^3.0.24"
   }
 }
