--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
     "react-dom": "^18.0.0",
     "react-toastify": "^9.1.1",
     "tailwindcss": "^3.0.24"
+  },
+  "devDependencies": {
+    "prettier": "^2.8.3",
+    "prettier-plugin-astro": "^0.8.0"
   }
 }
