--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "tailwindcss": "^3.0.24"
   },
   "devDependencies": {
+    "@typescript-eslint/parser": "^5.50.0",
+    "eslint": "^8.33.0",
+    "eslint-plugin-astro": "^0.23.0",
     "prettier": "^2.8.3",
     "prettier-plugin-astro": "^0.8.0"
   }
