--- a/package.json
+++ b/package.json
@@ -11,21 +11,21 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/react": "^2.0.2",
-    "@astrojs/tailwind": "^3.0.0",
-    "@types/react": "^18.0.21",
-    "@types/react-dom": "^18.0.6",
-    "astro": "^2.0.2",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-toastify": "^9.1.1",
-    "tailwindcss": "^3.0.24"
+    "@astrojs/react": "2.0.2",
+    "@astrojs/tailwind": "3.0.0",
+    "@types/react": "18.0.21",
+    "@types/react-dom": "18.0.6",
+    "astro": "2.0.2",
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
+    "react-toastify": "9.1.1",
+    "tailwindcss": "3.0.24"
   },
   "devDependencies": {
-    "@typescript-eslint/parser": "^5.50.0",
-    "eslint": "^8.33.0",
-    "eslint-plugin-astro": "^0.23.0",
-    "prettier": "^2.8.3",
-    "prettier-plugin-astro": "^0.8.0"
+    "@typescript-eslint/parser": "5.50.0",
+    "eslint": "8.33.0",
+    "eslint-plugin-astro": "0.23.0",
+    "prettier": "2.8.3",
+    "prettier-plugin-astro": "0.8.0"
   }
 }
