--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
   },
   "dependencies": {
     "@astrojs/react": "2.0.2",
-    "@astrojs/tailwind": "3.0.0",
-    "@types/react": "18.0.21",
-    "@types/react-dom": "18.0.6",
-    "astro": "2.0.2",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
+    "@astrojs/tailwind": "3.0.1",
+    "@types/react": "18.0.27",
+    "@types/react-dom": "18.0.10",
+    "astro": "2.0.5",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-toastify": "9.1.1",
-    "tailwindcss": "3.0.24"
+    "tailwindcss": "3.2.4",
+    "typescript": "4.9.5"
   },
   "devDependencies": {
     "@typescript-eslint/parser": "5.50.0",
