--- a/package.json
+++ b/package.json
@@ -19,14 +19,14 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-toastify": "9.1.1",
-    "tailwindcss": "3.2.4",
-    "typescript": "4.9.5"
+    "tailwindcss": "3.2.4"
   },
   "devDependencies": {
     "@typescript-eslint/parser": "5.50.0",
     "eslint": "8.33.0",
     "eslint-plugin-astro": "0.23.0",
     "prettier": "2.8.3",
-    "prettier-plugin-astro": "0.8.0"
+    "prettier-plugin-astro": "0.8.0",
+    "typescript": "4.9.5"
   }
 }
