--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@astrojs/react": "2.0.2",
+    "@astrojs/rss": "2.1.0",
     "@astrojs/tailwind": "3.0.1",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
